# zataboxtickets

./: README.md
go/: README.md  client.go  client_test.go  go.mod  resources_gen.go
node/: README.md  package.json
node/src/: index.d.ts  index.js  resources.generated.d.ts  resources.generated.js
node/src/__tests__/: client.test.js
php/: LICENSE  README.md  composer.json
php/src/: Client.php  Resources.php  autoload.php
php/tests/: server.php  test_client.php
python/: .gitignore  README.md  pyproject.toml
python/tests/: test_client.py
python/zatabox/: __init__.py  _http.py  client.py  resources.py
ruby/: .gitignore  README.md  zatabox.gemspec
ruby/lib/: zatabox.rb
ruby/lib/zatabox/: client.rb  errors.rb  resources.rb  version.rb
ruby/test/: test_client.rb
scripts/: generate.mjs
spec/: CONVENTIONS.md  endpoints.json
